added cart, order form, popUp

--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -86,3 +86,9 @@
 .products__item button:hover{
   box-shadow: 0 0 10px green, 0 0 10px green;
 }
+.products__item button.active{
+  background: grey;
+}
+.products__item button.active:hover{
+  box-shadow: none;
+}
